--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
+<h1>{{ seconds }} : {{ decySeconds }}</h1>
 
-<h1>{{seconds}} : {{decySeconds}}</h1>
+<button (click)="startStoper()">Start</button>
