--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
 <h1>{{ seconds }} : {{ decySeconds }}</h1>
 
 <button (click)="startStoper()">Start</button>
+<button (click)="stopStoper()">Stop</button>
