--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,5 +15,6 @@
 
 <a [routerLink]="'/'">Home</a>
 <a [routerLink]="'/rounds'">Rounds</a>
+<a [routerLink]="'/users'">Users</a>
 
 <router-outlet></router-outlet>
